RESOLVED FIXED204428
Web Inspector: removing the blackbox for a specific script doesn't actually remove the blackbox
https://bugs.webkit.org/show_bug.cgi?id=204428
Summary Web Inspector: removing the blackbox for a specific script doesn't actually r...
Devin Rousso
Reported 2019-11-20 16:09:16 PST
# STEPS TO REPRODUCE: 1. inspect <http://bogojoker.com/shell/> 2. add an event breakpoint for "click" 3. blackbox <http://bogojoker.com/shell/js/jquery.js> 4. click one of the up/down arrows in the main vertically scrolling area => script should pause inside <http://bogojoker.com/shell/js/easySlider.min.js> 5. keep continuing until script is no longer paused 6. un-blackbox <http://bogojoker.com/shell/js/jquery.js> 7. repeat step 4 => script pauses inside <http://bogojoker.com/shell/js/easySlider.min.js> instead of inside <http://bogojoker.com/shell/js/jquery.js>
Attachments
Patch (7.25 KB, patch)
2019-11-20 16:15 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-11-20 16:15:15 PST
WebKit Commit Bot
Comment 2 2019-11-21 04:15:07 PST
Comment on attachment 384000 [details] Patch Clearing flags on attachment: 384000 Committed r252730: <https://trac.webkit.org/changeset/252730>
WebKit Commit Bot
Comment 3 2019-11-21 04:15:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-21 04:16:31 PST
Note You need to log in before you can comment on or make changes to this bug.